// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteHits - Connect renders with translate 1`] = `
<div>
  <ul
    className="list"
  >
    <li
      className="item"
      key="0"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":0}
        ...
      </div>
    </li>
    <li
      className="item"
      key="1"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":1}
        ...
      </div>
    </li>
    <li
      className="item"
      key="2"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":2}
        ...
      </div>
    </li>
  </ul>
  <button
    className="loadMore loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Load more
  </button>
</div>
`;

exports[`InfiniteHits - Raw button is disabled when it is the last page 1`] = `
<div>
  <ul
    className="list"
  >
    <li
      className="item"
      key="0"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":0}
        ...
      </div>
    </li>
    <li
      className="item"
      key="1"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":1}
        ...
      </div>
    </li>
    <li
      className="item"
      key="2"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":2}
        ...
      </div>
    </li>
  </ul>
  <button
    className="loadMore loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    loadMore
  </button>
</div>
`;

exports[`InfiniteHits - Raw renders a custom hit 1`] = `
<div>
  <ul
    className="list"
  >
    <li
      className="item"
      key="0"
    >
      <div
        id={0}
      />
    </li>
    <li
      className="item"
      key="1"
    >
      <div
        id={1}
      />
    </li>
    <li
      className="item"
      key="2"
    >
      <div
        id={2}
      />
    </li>
  </ul>
  <button
    className="loadMore loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    loadMore
  </button>
</div>
`;

exports[`InfiniteHits - Raw renders a default hit 1`] = `
<div>
  <ul
    className="list"
  >
    <li
      className="item"
      key="0"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":0}
        ...
      </div>
    </li>
    <li
      className="item"
      key="1"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":1}
        ...
      </div>
    </li>
    <li
      className="item"
      key="2"
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #bbb",
            "marginBottom": "5px",
            "paddingBottom": "5px",
            "wordBreak": "break-all",
          }
        }
      >
        {"objectID":2}
        ...
      </div>
    </li>
  </ul>
  <button
    className="loadMore loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    loadMore
  </button>
</div>
`;
